fix scrollbar placement on body list area, move uploader props

--- a/app/ui/src/app/integration/list-page/list-page.component.scss
+++ b/app/ui/src/app/integration/list-page/list-page.component.scss
@@ -5,7 +5,8 @@
 }
 
 syndesis-loading {
-  padding-top: $gutter;
-  padding-bottom: $gutter;
+  padding: $gutter;
   display: block;
+  margin-left: -$gutter;
+  margin-right: -$gutter;
 }
